Document the DMG extraction that sandboxed builds cannot do
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>